# esp8266_exercises

./: .gitmodules  CMakeLists.txt  README.md
async_tcp/: CMakeLists.txt  access.h  access_point.h
async_tcp/client/: CMakeLists.txt  client.cpp
async_tcp/client/targets/esp8266/: CMakeLists.txt
async_tcp/client/targets/esp8266/12e/: CMakeLists.txt
async_tcp/client/targets/esp8266/generic/: CMakeLists.txt
async_tcp/client/targets/espwroom32/: CMakeLists.txt
async_tcp/server/: server.cpp
async_tcp/server/targets/esp8266/: CMakeLists.txt
async_tcp/server/targets/esp8266/12e/: CMakeLists.txt
async_tcp/server/targets/esp8266/generic/: CMakeLists.txt
async_tcp/server/targets/espwroom32/: CMakeLists.txt
async_udp/: CMakeLists.txt
async_udp/client/: CMakeLists.txt  client.cpp
async_udp/client/targets/esp8266/: CMakeLists.txt
async_udp/client/targets/esp8266/12e/: CMakeLists.txt
async_udp/client/targets/esp8266/generic/: CMakeLists.txt
async_udp/client/targets/espwroom32/: CMakeLists.txt
async_udp/server/: CMakeLists.txt  server.cpp
async_udp/server/targets/esp8266/: CMakeLists.txt
async_udp/server/targets/esp8266/12e/: CMakeLists.txt
async_udp/server/targets/esp8266/generic/: CMakeLists.txt
async_udp/server/targets/espwroom32/: CMakeLists.txt
ble/: CMakeLists.txt
ble/client/: client.cpp
ble/gatt_client/: gatt_client.cpp
ble/gatt_server/: gatt_server.cpp
ble/server/: server.cpp
ble/targets/client_wroom32/: CMakeLists.txt
ble/targets/gatt_client_wroom32/: CMakeLists.txt
ble/targets/gatt_server_wroom32/: CMakeLists.txt
ble/targets/server_wroom32/: CMakeLists.txt
blink/: CMakeLists.txt  Loop.cpp  Setup.cpp
blink/targets/esp8266/: CMakeLists.txt
blink/targets/esp8266_12e/: CMakeLists.txt
blink/targets/espwroom32/: CMakeLists.txt
buttons/: Loop.cpp  Pins.h  Setup.cpp
buttons/targets/12e/: CMakeLists.txt
buttons/targets/generic/: CMakeLists.txt
data_logger/: CMakeLists.txt  Lcd.cpp  Lcd.h  Loop.cpp  Setup.cpp
data_logger/targets/12e/: CMakeLists.txt
data_logger/targets/esp8266/: CMakeLists.txt
data_logger/targets/esp8266/generic/: CMakeLists.txt
data_logger/targets/espwroom32/: CMakeLists.txt
esp32_nokia_5110/: CMakeLists.txt  main.cpp
esp32_nokia_5110/targets/espwroom32/: CMakeLists.txt
gps/: CMakeLists.txt  Components.cpp  Components.h  Loop.cpp  Setup.cpp
gps/targets/12e/: CMakeLists.txt
gps/targets/esp8266/: CMakeLists.txt
gps/targets/esp8266/12e/: CMakeLists.txt
gps/targets/esp8266/generic/: CMakeLists.txt
gps/targets/espwroom32/: CMakeLists.txt
gps/targets/generic/: CMakeLists.txt
gps_ss/: CMakeLists.txt  Components.cpp  Components.h  Loop.cpp  Setup.cpp
gps_ss/targets/esp8266/: CMakeLists.txt
gps_ss/targets/esp8266/12e/: CMakeLists.txt
i2c_scanner/: CMakeLists.txt  Loop.cpp  Setup.cpp
i2c_scanner/targets/12e/: CMakeLists.txt
lcd_i2c/: CMakeLists.txt  Loop.cpp  Setup.cpp
lcd_i2c/targets/12e/: CMakeLists.txt
lcd_i2c/targets/generic/: CMakeLists.txt
multi_core/: CMakeLists.txt  Led.h  Loop.cpp  Setup.cpp
multi_core/targets/espwroom32/: CMakeLists.txt
nokia_5110_lcd/: CMakeLists.txt  nokia_5110_lcd.cpp
nokia_5110_lcd/targets/12e/: CMakeLists.txt
nokia_5110_lcd/targets/espwroom32/: CMakeLists.txt
ota_flash/: CMakeLists.txt  OtaFlash.cpp
ota_flash/targets/esp8266/: CMakeLists.txt
ota_flash/targets/esp8266/12e/: CMakeLists.txt
ota_flash/targets/esp8266/generic/: CMakeLists.txt
ota_flash/targets/espwroom32/: CMakeLists.txt
ps2_mouse/: CMakeLists.txt  Ps2Mouse.cpp
ps2_mouse/targets/atmega328/: CMakeLists.txt
sd_cleaner/: CMakeLists.txt  sd_cleaner.cpp
sd_cleaner/targets/12e/: CMakeLists.txt
sd_cleaner/targets/espwroom32/: CMakeLists.txt
sync_tcp/: CMakeLists.txt  LoopLogger.h
sync_tcp/client/: client.cpp
sync_tcp/client/targets/esp8266/: CMakeLists.txt
sync_tcp/client/targets/esp8266/12e/: CMakeLists.txt
sync_tcp/client/targets/esp8266/generic/: CMakeLists.txt
sync_tcp/server/: CMakeLists.txt  server.cpp
sync_tcp/server/targets/esp8266/: CMakeLists.txt
sync_tcp/server/targets/esp8266/12e/: CMakeLists.txt
sync_tcp/server/targets/esp8266/generic/: CMakeLists.txt
web_ap/: CMakeLists.txt  Components.cpp  Components.h  Credentials.h  Loop.cpp  Setup.cpp
web_ap/targets/12e/: CMakeLists.txt
web_ap/targets/generic/: CMakeLists.txt
web_server/: CMakeLists.txt  Components.cpp  Components.h  Credentials.h  Loop.cpp  Pins.h  Setup.cpp
web_server/targets/12e/: CMakeLists.txt
web_server/targets/generic/: CMakeLists.txt
web_sockets/: CMakeLists.txt  Components.cpp  Components.h  Loop.cpp  Setup.cpp
web_sockets/targets/12e/: CMakeLists.txt
wire/: CMakeLists.txt
wire/master/: CMakeLists.txt  Components.h  Loop.cpp  Setup.cpp
wire/master/targets/12e/: CMakeLists.txt
wire/slave/: CMakeLists.txt  Components.h  Loop.cpp  Setup.cpp
wire/slave/targets/atmega328/: CMakeLists.txt
